--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="bower_components/Framework7/dist/css/framework7.ios.colors.min.css">
     <!-- Path to your custom app styles-->
     <link rel="stylesheet" href="css/my-app.css">
+    <!-- FontAwesome-->
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
 </head>
 
 <body>
@@ -23,7 +25,7 @@
     <!-- Panels overlay-->
     <div class="panel-overlay"></div>
     <!-- Left panel with reveal effect-->
-    <div class="panel panel-right panel-reveal">
+    <div class="panel panel-left panel-reveal">
         <div class="content-block">
             <p>Left panel content goes here</p>
         </div>
@@ -75,15 +77,28 @@
     </div>
 
 
-    <!-- Should be a direct child of BODY -->
+    <!-- Tela de Login -->
     <div class="login-screen modal-in">
         <!-- Default view-page layout -->
         <div class="view">
             <div class="page">
                 <!-- page-content has additional login-screen content -->
-                <div class="page-content login-screen-content">
-                    <div class="login-screen-title">HortApp</div>
-
+                <div class="page-content login-screen-content bg-lightblue">
+                    <div class="row">
+                        <div class="col-auto">
+                            <div class="login-screen-title color-white">HortApp</div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-auto" id="logoLogin">
+                            <img src="img/logo/LogoBranco-F7.png" alt="Logo HortApp" id="imagem" />
+                        </div>
+                    </div>
+                    <div class="row content-block">
+                        <div class="col-100">
+                            <a href="#" class="button button-big button-fill close-login-screen color-red"><i class="fa fa-google" aria-hidden="true"></i>&nbspSign in with Google</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -94,6 +109,10 @@
     <script type="text/javascript" src="bower_components/Framework7/dist/js/framework7.min.js"></script>
     <!-- Path to your app js-->
     <script type="text/javascript" src="js/my-app.js"></script>
+    <!-- JQuery-->
+    <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
+    <!-- JS personalizado-->
+    <script type="text/javascript" src="js/my-script.js"></script>
 </body>
 
 </html>
