Esboço do chat criado

--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -27,13 +27,13 @@
     <!-- Left panel with reveal effect-->
 
     <div class="panel panel-left panel-reveal bg-white">
-        <div class="row bg-lightblue">
+        <div class="row bg-lightblue color-white">
             <div class="round">
                 <div style="background-image: url('img/avatar/avatar.jpg');"></div>
             </div>
         </div>
-        <div class="row bg-lightblue">
-            <div class="col-100 text-center color-white">
+        <div class="row bg-lightblue color-white">
+            <div class="col-100 text-center">
                 <p>
                     <h2>Kevin Minion</h2></p>
             </div>
@@ -83,15 +83,14 @@
     <!-- Views -->
     <div class="views">
         <div class="view view-main">
-
             <!-- Top Navbar-->
             <div class="navbar">
                 <div class="navbar-inner">
                     <div class="left">
-                        <a href="#" class="link icon-only">
+                        <!--<a href="#" class="link icon-only">
                             <i class="icon icon-back"></i>
                             <span>Voltar</span>
-                        </a>
+                        </a>-->
                     </div>
                     <div class="center sliding">HortApp</div>
                     <div class="right sliding">
@@ -107,93 +106,45 @@
             <!-- Now we need additional "navbar-through" and "toolbar-through" classes on Pages -->
             <div class="pages navbar-through toolbar-through">
                 <div data-page="index" class="page">
-                    <div class="page-content hide-tabbar-on-scroll">
+                    <div class="page-content hide-toolbar-on-scroll">
                         <p>Page content goes here</p>
                         <!-- Link to another page -->
                         <div class="content-block">
-                            <p><a href="about.html">About app</a></p>
+                            <p><a href="views/about/about.html">About app</a></p>
                             <p><a href="#" class="open-login-screen">Open Login Screen</a></p>
                         </div>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
-                        <p>Page content goes here</p>
+
                     </div>
                 </div>
             </div>
 
-            <!-- Bottom Toolbar-->
-            <div class="toolbar tabbar">
+            <div class="toolbar">
                 <div class="toolbar-inner">
-                    <a href="#tab1" class="tab-link active">
+                    <a href="views/chat/chat.html">
                         <i class="fa fa-comments" aria-hidden="true"></i>
-                        <span class="tabbar-label">Chat</span>
+                        <span>Chat</span>
                     </a>
-                    <a href="#tab2" class="tab-link">
-                        <i class="fa fa-cloud" aria-hidden="true"></i>
-                    </a>
-                    <a href="#tab3" class="tab-link">
-                        <i class="fa fa-camera" aria-hidden="true"></i>
-                    </a>
+                    <a href="#" class="link"><i class="fa fa-apple" aria-hidden="true"></i></a>
+                    <a href="#" class="link"><i class="fa fa-clock-o" aria-hidden="true"></i></a>
                 </div>
             </div>
-            <!-- /End of Bottom Toolbar-->
+
+
+            <!-- Bottom Toolbar
+                <div class="toolbar tabbar">
+                    <div class="toolbar-inner">
+                        <a href="#tab1" class="tab-link">
+                            <i class="fa fa-comments" aria-hidden="true"></i>
+                            <span class="tabbar-label">Chat</span>
+                        </a>
+                        <a href="#tab2" class="tab-link">
+                            <i class="fa fa-cloud" aria-hidden="true"></i>
+                        </a>
+                        <a href="#tab3" class="tab-link">
+                            <i class="fa fa-camera" aria-hidden="true"></i>
+                        </a>
+                    </div>
+            /End of Bottom Toolbar-->
 
         </div>
     </div>
