View não funcionou. Adicionado botão flutuante para Salvar, mas será utilizado na navbar

--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -41,7 +41,7 @@
         <div class="list-block">
             <ul>
                 <li>
-                    <a href="views/usuario/perfil.html" class="item-link item-content" data-view=".salvar-perfil">
+                    <a href="views/usuario/perfil.html" class="item-link item-content">
                         <div class="item-media"><i class="fa fa-user" aria-hidden="true"></i></div>
                         <div class="item-inner">
                             <div class="item-title">Meu perfil</div>
@@ -124,7 +124,7 @@
                         <i class="fa fa-comments" aria-hidden="true"></i>
                         <span>Chat</span>
                     </a>
-                    <a href="views/usuario/perfil.html" class="link" data-view=".salvar-perfil">
+                    <a href="#" class="link">
                         <i class="fa fa-apple" aria-hidden="true"></i>
                         <span>Apple</span>
                     </a>
@@ -153,39 +153,6 @@
                 /End of Bottom Toolbar-->
 
         </div>
-
-        <div class="view salvar-perfil">
-            <!-- Navbar-->
-            <div class="navbar">
-                <div class="navbar-inner">
-                    <div class="left">Left</div>
-                    <div class="center">Center</div>
-                    <div class="right">Right</div>
-                </div>
-            </div>
-            <!-- Pages -->
-            <div class="pages">
-                <div class="page" data-page="view-perfil">
-                    <div class="page-content">
-                        <h3>View perfil</h3>
-                    </div>
-                </div>
-            </div>
-            <!-- Toolbar-->
-            <div class="toolbar">
-                <div class="toolbar-inner">
-                    <a href="#" class="link">
-                        <i class="fa fa-times" aria-hidden="true"></i>
-                        <span>Cancelar</span>
-                    </a>
-                    <a href="#" class="link">
-                        <i class="fa fa-check" aria-hidden="true"></i>
-                        <span>Salvar</span>
-                    </a>
-                </div>
-            </div>
-        </div>
-
     </div>
 
 
