Edição no perfil de usuário: colocanco mapa

--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="css/my-app.css">
     <!-- FontAwesome-->
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
+
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
 
 <body class="theme-blue">
@@ -169,7 +171,7 @@
                     </div>
                     <div class="row content-block">
                         <div class="col-100">
-                            <a href="#" class="button button-big button-fill close-login-screen color-red"><i class="fa fa-google" aria-hidden="true"></i>&nbspSign in with Google</a>
+                            <a href="#" class="button button-big button-fill close-login-screen color-red animated fadeInUp"><i class="fa fa-google" aria-hidden="true"></i>&nbspSign in with Google</a>
                         </div>
                     </div>
                 </div>
