--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -17,8 +17,8 @@
     <link rel="stylesheet" href="css/my-app.css">
     <!-- FontAwesome-->
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
-
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <!-- Animate.css https://github.com/daneden/animate.css -->
+    <link rel="stylesheet" href="bower_components/animate.css/animate.min.css">
 </head>
 
 <body class="theme-blue">
