Criado json com estados e cidades para ser utilizado no formulário do perfil

--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -161,17 +161,19 @@
                 <div class="page-content login-screen-content bg-lightblue">
                     <div class="row">
                         <div class="col-auto">
-                            <div class="login-screen-title color-white">HortApp</div>
+                            <div class="login-screen-title color-white animated fadeInDownBig">HortApp</div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-auto" id="logoLogin">
+                        <div class="col-5"></div>
+                        <div class="col-90 animated zoomIn" id="logoLogin">
                             <img src="img/logo/LogoBranco-F7.png" alt="Logo HortApp" id="imagem" />
                         </div>
+                        <div class="col-5"></div>
                     </div>
                     <div class="row content-block">
                         <div class="col-100">
-                            <a href="#" class="button button-big button-fill close-login-screen color-red animated fadeInUp"><i class="fa fa-google" aria-hidden="true"></i>&nbspSign in with Google</a>
+                            <a href="#" class="button button-big button-fill close-login-screen color-red animated fadeInUpBig"><i class="fa fa-google" aria-hidden="true"></i>&nbspSign in with Google</a>
                         </div>
                     </div>
                 </div>
@@ -188,6 +190,10 @@
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
     <!-- JS personalizado-->
     <script type="text/javascript" src="js/my-script.js"></script>
+    <!-- JSON Estados e Cidades-->
+    <script type="text/javascript" src="js/usuario/uf.js"></script>
+    
+    <script type="text/javascript" src="js/usuario/usuario.js"></script>
 </body>
 
 </html>
