Incluida a parte de privacidade no formulário do perfil

--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -153,7 +153,7 @@
     </div>
 
     <!-- Tela de Login add modal-in-->
-    <div class="login-screen modal-in">
+    <div class="login-screen">
         <!-- Default view-page layout -->
         <div class="view">
             <div class="page">
@@ -192,7 +192,7 @@
     <script type="text/javascript" src="js/my-script.js"></script>
     <!-- JSON Estados e Cidades-->
     <script type="text/javascript" src="js/usuario/uf.js"></script>
-    
+
     <script type="text/javascript" src="js/usuario/usuario.js"></script>
 </body>
 
