Busca por CEP concluída. Alterando campos do formulário dinâmicamente após a requisição Ajax

--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -153,7 +153,7 @@
     </div>
 
     <!-- Tela de Login add modal-in-->
-    <div class="login-screen">
+    <div class="login-screen modal-in">
         <!-- Default view-page layout -->
         <div class="view">
             <div class="page">
