--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -58,7 +58,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="item-link item-content">
+                    <a href="#" class="item-link item-content open-login-screen">
                         <div class="item-media"><i class="fa fa-cog" aria-hidden="true"></i></div>
                         <div class="item-inner">
                             <div class="item-title">Configurações</div>
