--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -194,6 +194,7 @@
     <script type="text/javascript" src="js/usuario/autenticacao.js"></script>
     <script type="text/javascript" src="js/localizacao.js"></script>
     <script type="text/javascript" src="js/notificacoes.js"></script>
+    <script type="text/javascript" src="js/my-script.js"></script>
     <!-- JSON Estados e Cidades-->
     <script type="text/javascript" src="js/usuario/uf.js"></script>
     <script type="text/javascript" src="js/usuario/usuario.js"></script>
