--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+    <meta http-equiv="Content-Security-Policy" content="connect-src *;"/>
     <!-- Your app title -->
     <title>HortApp</title>
     <!-- Path to Framework7 iOS CSS theme styles-->
