usuario quase pronto, falta a parte da privacidade e realizar mais testes

--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -30,13 +30,13 @@
     <div class="panel panel-left panel-reveal bg-white">
         <div class="row bg-lightblue color-white">
             <div class="round">
-                <div id="usuImagem" style="background-image: url('img/avatar/avatar.jpg');"></div>
+                <div id="painelUsuImagem" style="background-image: url('img/avatar/avatar.jpg');"></div>
             </div>
         </div>
         <div class="row bg-lightblue color-white">
             <div class="col-100 text-center">
                 <p>
-                    <h2 id="usuNome">Kevin Minion</h2></p>
+                    <h2 id="painelUsuNome"></h2></p>
             </div>
         </div>
         <div class="list-block">
