--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -188,6 +188,9 @@
     <script type="text/javascript" src="bower_components/Framework7/dist/js/framework7.min.js"></script>
     <!-- JQuery-->
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
+
+    <script type="text/javascript" src="js/Modelos.js"></script>
+
     <!-- Configurações do F7 -->
     <script type="text/javascript" src="js/my-app.js"></script>
     <!-- JS personalizado-->
