--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -119,7 +119,7 @@
                 </div>
             </div>
 
-            <div class="toolbar">
+            <!-- <div class="toolbar">
                 <div class="toolbar-inner">
                     <a href="views/chat/chat.html">
                         <i class="fa fa-comments" aria-hidden="true"></i>
@@ -134,7 +134,7 @@
                         <span>Lembrete</span>
                     </a>
                 </div>
-            </div>
+            </div> -->
 
             <!--Bottom tabbar
             <div class="toolbar tabbar">
