--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -41,6 +41,33 @@
         </div>
         <div class="list-block">
             <ul>
+              <li>
+                  <a href="index.html" class="item-link item-content">
+                      <div class="item-media"><i class="fa fa-home" aria-hidden="true"></i></div>
+                      <div class="item-inner">
+                          <div class="item-title">Início</div>
+                          <div class="item-after"></div>
+                      </div>
+                  </a>
+              </li>
+                <li>
+                    <a href="#" class="item-link item-content">
+                        <div class="item-media"><i class="fa fa-tags" aria-hidden="true"></i></div>
+                        <div class="item-inner">
+                            <div class="item-title">Ofertas</div>
+                            <div class="item-after"></div>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="item-link item-content">
+                        <div class="item-media"><i class="fa fa-shopping-cart" aria-hidden="true"></i></div>
+                        <div class="item-inner">
+                            <div class="item-title">Reservas</div>
+                            <div class="item-after"></div>
+                        </div>
+                    </a>
+                </li>
                 <li>
                     <a href="views/usuario/meuPerfil.html" class="item-link item-content close-panel">
                         <div class="item-media"><i class="fa fa-user" aria-hidden="true"></i></div>
@@ -52,24 +79,15 @@
                 </li>
                 <li>
                     <a href="#" class="item-link item-content">
-                        <div class="item-media"><i class="fa fa-shopping-cart" aria-hidden="true"></i></div>
-                        <div class="item-inner">
-                            <div class="item-title">Reservas</div>
-                            <div class="item-after"><span class="badge color-green">5</span></div>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="item-link item-content open-login-screen">
                         <div class="item-media"><i class="fa fa-cog" aria-hidden="true"></i></div>
                         <div class="item-inner">
-                            <div class="item-title">Configurações</div>
+                            <div class="item-title">Preferências</div>
                             <div class="item-after"></div>
                         </div>
                     </a>
                 </li>
                 <li>
-                    <a href="#" id="btnSair" class="item-link item-content">
+                    <a href="#" id="btnSair" class="item-link item-content open-login-screen">
                         <div class="item-media"><i class="fa fa-power-off" aria-hidden="true"></i></div>
                         <div class="item-inner">
                             <div class="item-title">Sair</div>
@@ -108,10 +126,9 @@
             <div class="pages navbar-through toolbar-through">
                 <div data-page="index" class="page">
                     <div class="page-content">
-                        <p>Page content goes here</p>
                         <!-- Link to another page -->
                         <div class="content-block">
-                            <p>Page content goes here</p>
+                            <p id="conteudo"></p>
                             <p><a href="views/about/about.html">About app</a></p>
                         </div>
 
